# prova-final-a2-devops

./: README.md  docker-compose.yml
mysql/: Dockerfile
order-service/: .dockerignore  .env.docker  .env.example  Dockerfile  pyproject.toml
order-service/src/: __init__.py
payment-service/: Dockerfile  index.php
product-service/: Dockerfile  index.js  package-lock.json  package.json
